--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-BOT_TOKEN=your-telegram-bot-token
-ADMIN_ID=your-telegram-user-id
-RENDER_EXTERNAL_HOSTNAME=your-render-external-hostname
-GOOGLE_APPLICATION_CREDENTIALS=path/to/serviceAccountKey.json
+BOT_TOKEN=7087313333:AAEi0ia4wp2zekJLxY-NIILGYyNvuruJKUE
+ADMIN_ID=6826870863
+RENDER_EXTERNAL_HOSTNAME=https://x-py.onrender.com
+GOOGLE_APPLICATION_CREDENTIALS=serviceAccountKey.json
 PORT=5000
