--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 BOT_TOKEN=7087313333:AAEi0ia4wp2zekJLxY-NIILGYyNvuruJKUE
 ADMIN_ID=6826870863
 RENDER_EXTERNAL_HOSTNAME=https://x-py.onrender.com
-GOOGLE_APPLICATION_CREDENTIALS=serviceAccountKey.json
 PORT=5000
+MONGO_URI=mongodb+srv://farhannry:xvideos.com@cluster0.lgghqjq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_NAME=Clusster0
