--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ ADMIN_ID=6826870863
 RENDER_EXTERNAL_HOSTNAME=https://x-py.onrender.com
 PORT=5000
 MONGO_URI=mongodb+srv://farhannry:xvideos.com@cluster0.lgghqjq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-DB_NAME=Cluster0
+DB_NAME=premium_brazzers
