--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 BOT_TOKEN=7087313333:AAEi0ia4wp2zekJLxY-NIILGYyNvuruJKUE
 ADMIN_ID=6826870863
-RENDER_EXTERNAL_HOSTNAME=https://x-py.onrender.com
-PORT=5000
-MONGO_URI=mongodb+srv://farhannry:xvideos.com@cluster0.lgghqjq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-DB_NAME=premium_brazzers
+MYSQL_HOST=sql12.freesqldatabase.com
+MYSQL_USER=sql12714230
+MYSQL_PASSWORD=sT5Ll7ZqBb
+MYSQL_DATABASE=sql12714230
+WEBHOOK_URL=https://x-py.onrender.com/7087313333:AAEi0ia4wp2zekJLxY-NIILGYyNvuruJKUE
