--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ MYSQL_HOST=sql12.freesqldatabase.com
 MYSQL_USER=sql12714230
 MYSQL_PASSWORD=sT5Ll7ZqBb
 MYSQL_DATABASE=sql12714230
-WEBHOOK_URL=https://x-py.onrender.com/7087313333:AAEi0ia4wp2zekJLxY-NIILGYyNvuruJKUE
+WEBHOOK_URL=https://x-py.onrender.com
+WEBHOOK_URL_PATH=/7087313333:AAEi0ia4wp2zekJLxY-NIILGYyNvuruJKUE
