--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7087313333:AAEi0ia4wp2zekJLxY-NIILGYyNvuruJKUE
 PORT=8443
-WEBHOOK_URL=https://x-py.onrender.com/7087313333:AAEi0ia4wp2zekJLxY-NIILGYyNvuruJKUE
+WEBHOOK_URL=https://x-py.onrender.com/
